2007-03-07  Paul J Stevens <paul@nfg.nl>

	* db.c, dbmail-imapsession.c, dbmail-imapsession.h, dbmail-message.c,
	  dbmailtypes.h, imap4.c, imapcommands.c, test-scripts/testbox,
	  test-scripts/testimap.py:
	fix and extend imap flags handling (bug #519, #381)

2007-03-06  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_misc.c:
	added testcase for mailbox_remove_namespace
	* check_dbmail_imapd.c:
	add envelope test
	* test-scripts/testimap.py:
	fix false negatives after recent_flag changes
	* debian/dbmail.postinst, debian/dbmail.postrm:
	debian postinst fixes
	* contrib/sql2sql/mysql2pgsql.sh:
	adding migration script
	* contrib/mailbox2dbmail/mailbox2dbmail:
	add alternative config file option
	* dbmail-imapsession.c, imapcommands.c, test-scripts/testimap.py:
	recent_flag fixes

2007-03-05  Aaron Stone <aaron@serendipity.cx>

	* dbmail-message.c:
	Sadly we have to flush after every fwrite to be sure that we don't fit
	an entire email into the C library's buffers and then lose it all when
	the filesystem is full and the tmpfile cannot be closed out (really
	closes bug #511 this time).
	* dbmail-mailbox.c:
	Support IMAP's SEARCH LARGER and SEARCH SMALLER (closes bug #512).

2007-03-04  Aaron Stone <aaron@serendipity.cx>

	* misc.c, check_dbmail_misc.c:
	More work on mailbox_remove_namespace to handle search patterns and
	missing usernames when in the #Users namespace.

2007-03-02  Aaron Stone <aaron@serendipity.cx>

	* dbmail-message.c:
	Handle read and write errors from incoming message stream and its tmp
	file during the filter process (closes bug #511).
	* server.c:
	Accepted Bernard Johnson's umask patch (closes bug #516).
	* misc.c, check_dbmail_misc.c:
	More work on mailbox_remove_namespace to handle search patterns and
	missing usernames when in the #Users namespace.

2007-03-01  Paul J Stevens <paul@nfg.nl>

	* dbmail-user.c, user.c:
	revert changes at aarons request
	* debian/changelog, debian/dbmail.templates, debian/po/cs.po, 